data/all_generated_tests/raw_wast_tests/br_if_StackCorruption_1468.wast
;; 9. **Test Description 9**: Define a multilevel control flow with alternating `block` and `loop`, each with distinct input and output types. Use `br_if` to interact conditionally among them. Specifically test if `wizard_engine` properly adjusts based on whether the target is a `loop` or a `block`.

(assert_invalid
  (module
    (func $multi-level-control
      (block $outer (result i32)
        (i32.const 42)
        (loop $inner (result i32)
          (i32.const 1)
          (br_if 1 (i32.const 1)) ;; Should jump to $outer
          (i32.const 2)
        )
      )
    )
  )
  "type mismatch"
)